87 - support for tokenless products (#7)
* update api

* regen go sdk

* add development info to README

* update api, missed arrays

* regen go sdk

* regen TS

* package lock
