# generated/server/go-server/api/openapi.yaml
@@ -318,13 +318,71 @@ components:
           tags:
           - tags
           - tags
-        immutable:
+        product:
           novellia_standard_token:
             image: image
             copyright: copyright
             extension:
             - extension
             - extension
+            resource:
+            - content_type: content_type
+              resource_id: resource_id
+              description: description
+              priority: 9
+              url:
+              - url
+              - url
+              multihash: multihash
+              hash_source_type: hash_source_type
+            - content_type: content_type
+              resource_id: resource_id
+              description: description
+              priority: 9
+              url:
+              - url
+              - url
+              multihash: multihash
+              hash_source_type: hash_source_type
+            description:
+              short: short
+              long: long
+            version: 2
+            tags:
+            - tags
+            - tags
+            name: name
+            publisher:
+            - publisher
+            - publisher
+            native_token:
+              policy_id: policy_id
+              asset_id: asset_id
+            commission:
+            - address: address
+              name: name
+              percent: 3.616076749251911
+            - address: address
+              name: name
+              percent: 3.616076749251911
+            id: 7
+            novellia_version: 2
+          product_id: product_id
+          extended_721_token:
+            image: image
+            extension:
+            - extension
+            - extension
+            name: name
+            native_token:
+              policy_id: policy_id
+              asset_id: asset_id
+            id: 5
+          native_token:
+            policy_id: policy_id
+            asset_id: asset_id
+          novellia_product:
+            copyright: copyright
             resource:
             - content_type: content_type
               resource_id: resource_id
@@ -351,9 +409,6 @@ components:
             description:
               short: short
               long: long
-            native_token:
-              policy_id: policy_id
-              asset_id: asset_id
             commission:
             - address: address
               name: name
@@ -361,28 +416,10 @@ components:
             - address: address
               name: name
               percent: 3.616076749251911
-            id: 7
-            version: 2
-            novellia_version: 2
-          extended_721_token:
-            image: image
-            extension:
-            - extension
-            - extension
-            name: name
-            native_token:
-              policy_id: policy_id
-              asset_id: asset_id
-            id: 5
-          native_token:
-            policy_id: policy_id
-            asset_id: asset_id
-        product:
-          product_id: product_id
-          name: name
-          description:
-            short: short
-            long: long
+            version: 4
+            tags:
+            - tags
+            - tags
         organization:
           organization_id: organization_id
           name: name
@@ -415,15 +452,13 @@ components:
           $ref: '#/components/schemas/Product_stock'
         metadata:
           $ref: '#/components/schemas/Product_metadata'
-        immutable:
-          $ref: '#/components/schemas/Product_immutable'
+        product:
+          $ref: '#/components/schemas/Product_product'
         attribution:
           description: List of entities to give attribution to for product
           items:
             $ref: '#/components/schemas/Attribution'
           type: array
-        product:
-          $ref: '#/components/schemas/Product_product'
       required:
       - market
       - metadata
@@ -694,13 +729,17 @@ components:
           - url
           multihash: multihash
           hash_source_type: hash_source_type
+        description:
+          short: short
+          long: long
+        version: 2
+        tags:
+        - tags
+        - tags
         name: name
         publisher:
         - publisher
         - publisher
-        description:
-          short: short
-          long: long
         native_token:
           policy_id: policy_id
           asset_id: asset_id
@@ -712,7 +751,6 @@ components:
           name: name
           percent: 3.616076749251911
         id: 7
-        version: 2
         novellia_version: 2
       minProperties: 0
       properties:
@@ -721,7 +759,7 @@ components:
           type: string
         publisher:
           description: List of publishers or entities involved in token creation.
-            Useful for onlookers to determine token origin.
+            Useful for onlookers to determine token origin. These can be URLs.
           items:
             type: string
           type: array
@@ -760,6 +798,11 @@ components:
         novellia_version:
           description: Identifies the version of the specification in use.
           type: integer
+        tags:
+          description: Tags for sorting and filtering. "nsfw" indicates NSFW content
+          items:
+            type: string
+          type: array
       required:
       - copyright
       - description
@@ -771,6 +814,7 @@ components:
       - novellia_version
       - publisher
       - resource
+      - tags
       - version
       title: NovelliaStandardToken
       type: object
@@ -861,6 +905,88 @@ components:
           - https://www.artstation.com/
           - https://www.deviantart.com/
           work_attributed: Draculi Illustration
+    NovelliaProduct:
+      description: Product listed on Novelia without a token
+      example:
+        copyright: copyright
+        resource:
+        - content_type: content_type
+          resource_id: resource_id
+          description: description
+          priority: 9
+          url:
+          - url
+          - url
+          multihash: multihash
+          hash_source_type: hash_source_type
+        - content_type: content_type
+          resource_id: resource_id
+          description: description
+          priority: 9
+          url:
+          - url
+          - url
+          multihash: multihash
+          hash_source_type: hash_source_type
+        name: name
+        publisher:
+        - publisher
+        - publisher
+        description:
+          short: short
+          long: long
+        commission:
+        - address: address
+          name: name
+          percent: 3.616076749251911
+        - address: address
+          name: name
+          percent: 3.616076749251911
+        version: 4
+        tags:
+        - tags
+        - tags
+      properties:
+        copyright:
+          description: Attribution of rights to product.
+          type: string
+        publisher:
+          description: List of publishers or entities involved in token creation.
+            Useful for onlookers to determine token origin.
+          items:
+            type: string
+          type: array
+        version:
+          description: Iteration in update sequence for product.
+          type: integer
+        name:
+          description: Display name for token.
+          type: string
+        tags:
+          description: Tags for sorting and filtering. "nsfw" indicates NSFW content
+          items:
+            type: string
+          type: array
+        commission:
+          items:
+            $ref: '#/components/schemas/Commission'
+          type: array
+        description:
+          $ref: '#/components/schemas/DescriptionSet'
+        resource:
+          items:
+            $ref: '#/components/schemas/OffChainResource'
+          type: array
+      required:
+      - copyright
+      - description
+      - name
+      - publisher
+      - resource
+      - tags
+      - version
+      title: NovelliaProduct
+      type: object
     Status_cardano:
       example:
         initialized: true
@@ -954,7 +1080,8 @@ components:
       - date_listed
       - tags
       type: object
-    Product_immutable:
+    Product_product:
+      description: 'Immutable '
       example:
         novellia_standard_token:
           image: image
@@ -981,13 +1108,17 @@ components:
             - url
             multihash: multihash
             hash_source_type: hash_source_type
+          description:
+            short: short
+            long: long
+          version: 2
+          tags:
+          - tags
+          - tags
           name: name
           publisher:
           - publisher
           - publisher
-          description:
-            short: short
-            long: long
           native_token:
             policy_id: policy_id
             asset_id: asset_id
@@ -999,8 +1130,8 @@ components:
             name: name
             percent: 3.616076749251911
           id: 7
-          version: 2
           novellia_version: 2
+        product_id: product_id
         extended_721_token:
           image: image
           extension:
@@ -1014,6 +1145,45 @@ components:
         native_token:
           policy_id: policy_id
           asset_id: asset_id
+        novellia_product:
+          copyright: copyright
+          resource:
+          - content_type: content_type
+            resource_id: resource_id
+            description: description
+            priority: 9
+            url:
+            - url
+            - url
+            multihash: multihash
+            hash_source_type: hash_source_type
+          - content_type: content_type
+            resource_id: resource_id
+            description: description
+            priority: 9
+            url:
+            - url
+            - url
+            multihash: multihash
+            hash_source_type: hash_source_type
+          name: name
+          publisher:
+          - publisher
+          - publisher
+          description:
+            short: short
+            long: long
+          commission:
+          - address: address
+            name: name
+            percent: 3.616076749251911
+          - address: address
+            name: name
+            percent: 3.616076749251911
+          version: 4
+          tags:
+          - tags
+          - tags
       properties:
         extended_721_token:
           $ref: '#/components/schemas/Extended721Token'
@@ -1021,26 +1191,12 @@ components:
           $ref: '#/components/schemas/NovelliaStandardToken'
         native_token:
           $ref: '#/components/schemas/NativeToken'
-      type: object
-    Product_product:
-      example:
-        product_id: product_id
-        name: name
-        description:
-          short: short
-          long: long
-      properties:
-        name:
-          description: Product readable name
-          type: string
-        description:
-          $ref: '#/components/schemas/DescriptionSet'
+        novellia_product:
+          $ref: '#/components/schemas/NovelliaProduct'
         product_id:
-          description: Unique identfier for product
+          description: Unique identifier of product
           type: string
       required:
-      - description
-      - name
       - product_id
       type: object
     Order_products:
