# generated/server/go-server/go/model_product_immutable.go
@@ -1,20 +1,0 @@
-/*
- * novellia-api
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 0.4.0
- * Contact: contact@rektangularstudios.com
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package novellia_sdk
-
-type ProductImmutable struct {
-
-	Extended721Token Extended721Token `json:"extended_721_token,omitempty"`
-
-	NovelliaStandardToken NovelliaStandardToken `json:"novellia_standard_token,omitempty"`
-
-	NativeToken NativeToken `json:"native_token,omitempty"`
-}
